@@ -1,3 +1,10 @@
+2005-01-13  Benoit Blanchon  <bblanchon@users.sourceforge.net>
+
+	* include/wininet.h (InternetCheckConnectionA,
+	InternetCheckConnectionW) Add prototypes.
+	(INTERNET_RAS_INSTALLED, INTERNET_CONNECTION_OFFLINE,
+	INTERNET_CONNECTION_CONFIGURED): Add defines.
+
 2005-01-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
 	* include/commctrl.h (ComboBox_SetMinVisible,
